# internal/model/auth.go
@@ -1,0 +1,7 @@
+package model
+
+// LoginDTO - DTO для ручки Login
+type LoginDTO struct {
+	Username string
+	Password string
+}
