# internal/model/user.go
@@ -3,6 +3,8 @@ package model
 import (
 	"database/sql"
 	"time"
+
+	"github.com/dgrijalva/jwt-go"
 )
 
 // UserRole - Описывает роль пользователя от 0 до 255
@@ -15,19 +17,21 @@ const (
 	ADMIN
 )
 
-// User - структура, оисывающая пользователя в БД
+// User - структура, описывающая пользователя в БД
 type User struct {
 	ID        int64        `db:"id"`
 	Info      UserInfo     `db:""`
 	CreatedAt time.Time    `db:"created_at"`
 	UpdatedAt sql.NullTime `db:"updated_at"`
+	Password  string       `db:"password"`
 }
 
-// UserInfo - структура, оисывающая информацию о пользователе в БД
+// UserInfo - структура, описывающая информацию о пользователе в БД
 type UserInfo struct {
-	Name  string   `db:"name"`
-	Email string   `db:"email"`
-	Role  UserRole `db:"role"`
+	Username string   `db:"username"`
+	Name     string   `db:"name"`
+	Email    string   `db:"email"`
+	Role     UserRole `db:"role"`
 }
 
 // UserCreate - DTO для создания пользователя
@@ -40,4 +44,11 @@ type UserCreate struct {
 type UserUpdate struct {
 	ID   int64    `db:"id"`
 	Info UserInfo `db:""`
+}
+
+// UserClaims - параметры для JWT токена
+type UserClaims struct {
+	jwt.StandardClaims
+	Username string
+	Role     UserRole
 }
